initial exercices state

--- a/src/app/cv/cv-item/cv-item.component.html
+++ b/src/app/cv/cv-item/cv-item.component.html
@@ -1,6 +1,6 @@
-<div (click)="onSelectCv()">
+<div>
   <img
-    src="assets/images/{{cv.path | defaultImage}}"
+    src="assets/images/{{cv.path }}"
     alt="{{cv.name}}"
     [ngStyle]="{
       width: size + 'px',
