--- a/src/app/cv/cv/cv.component.html
+++ b/src/app/cv/cv/cv.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col">
     <!-- <ng-container *ngIf="cvs$ | async as cvs"> -->
-      <app-listcvs  [cvs]="cvs"/>
+      <app-listcvs/>
     <!-- </ng-container> -->
 
   </div>
   <div class="col">
-    <app-cv-card [cv]="selectedCv$ | async"/>
+    <app-cv-card />
   </div>
 </div>
 <app-embauche />
