--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,6 +1,6 @@
-<p  [style.backgroundColor]="color">color works!</p>
+<p>color works!</p>
 
-<input (change)="changeColor(colorInput.value)" #colorInput type="text" class="form-control">
-<button (click)="reset()" class="btn btn-danger">
+<input  type="text" class="form-control">
+<button class="btn btn-danger">
   reset
 </button>
