--- a/src/app/cv/cv-card/cv-card.component.html
+++ b/src/app/cv/cv-card/cv-card.component.html
@@ -5,7 +5,7 @@
             <img src="assets/images/rotating_card_thumb2.png" />
           </div>
           <div class="user">
-            <img class="img-circle" src="assets/images/{{cv.path | defaultImage}}" />
+            <img class="img-circle" src="assets/images/{{cv.path }}" />
           </div>
           <div class="content">
             <div class="main">
@@ -53,13 +53,11 @@
           <div class="footer">
             <div class="social-links text-center">
               <button
-                (click)="embaucher()"
+
                 class="btn btn-success">
                 embaucher
               </button>
               <button
-                test-cy="cvDetails"
-                [routerLink]="['/cv', cv.id]"
                 class="btn btn-dark">
                 détails
               </button>
