--- a/src/app/cv/details-cv/details-cv.component.html
+++ b/src/app/cv/details-cv/details-cv.component.html
@@ -6,7 +6,7 @@
         <h4 class="m-y-2">Cv {{ cv.firstname }} {{ cv.name }}</h4>
         <div class="d-flex justify-content-center">
           <img width="150px" height="150px" class="rounded-circle align-content-center"
-            src="assets/images/{{ cv.path | defaultImage }}" alt="{{ cv.name }}" />
+            src="assets/images/{{ cv.path  }}" alt="{{ cv.name }}" />
         </div>
         <div class="row">
           <div class="col-md-12">
@@ -35,8 +35,6 @@
             </table>
             <div class="d-flex justify-content-center">
               <button
-                *ngIf="authService.isLoggedIn$ | async"
-                (click)="deleteCv(cv)"
                 class="btn btn-danger">
                 Delete
               </button>
