--- a/src/app/cv/embauche/embauche.component.html
+++ b/src/app/cv/embauche/embauche.component.html
@@ -1,8 +1,8 @@
-<div class="alert alert-secondary mt-2" *ngIf="embauchees.length">
+<div class="alert alert-secondary mt-2">
   Liste des cv pré embauchées:
   <div class="embauchee row">
-    <div *ngFor="let embauche of embauchees" class="col-4">
-       <app-cv-item [cv]="embauche" [size]="150" />
+    <div class="col-4">
+
     </div>
   </div>
 </div>
