--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,7 +1,7 @@
 <ng-container
   *ngIf="(products$ | async) as productsList, else loading"
 >
-<button [disabled]="!takeMore" class="btn btn-primary" (click)="more()"> More Products</button>
+<button class="btn btn-primary" (click)="more()"> More Products</button>
 <div class="alert alert-warning">
   Product Number: {{productsList?.length}}
 </div>
