--- a/src/app/todo/todo/todo.component.html
+++ b/src/app/todo/todo/todo.component.html
@@ -1,22 +1,19 @@
 <div class="row">
   <div class="col">
     <ol class="list-group">
-      <li *ngFor="let todo of todos$ | async"
+      <li
         class="list-group-item">
-        {{ todo.name}} : {{ todo.content}}
+        TODO
         <i
-          (click)="deleteTodo(todo)"
           class="bi bi-trash2"></i>
       </li>
     </ol>
   </div>
   <div class="col">
     name:
-    <input [(ngModel)]="todo.name" type="text" class="form-control" /> content:
-    <input [(ngModel)]="todo.content" type="text" class="form-control" />
+    <input  type="text" class="form-control" /> content:
+    <input  type="text" class="form-control" />
     <button
-     [disabled] = "!todo.content.trim() || !todo.name.trim()"
-     (click)="addTodo()"
       class="btn btn-primary m-2"
     >
       add
